--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -4,6 +4,7 @@
   padding: 2rem 2rem;
   justify-content: space-between;
   background: #212529;
+  border-top: 3px solid #ffff00;
 
 }
 
@@ -11,7 +12,7 @@
   color: #fff;
   padding-right: 5rem;
   text-shadow: 2px 2px 4px #000000;
-  border-bottom: 3px solid yellow;
+  border-bottom: 3px solid #ffff00;
 }
 .left-c h2{
   font-size: 4rem;
@@ -34,12 +35,14 @@
 }
 .right-c{
   padding-left: 3rem;
+
  }
 @media all and (max-width: 480px) {
   .content{
     display: block;
   }
   .right-c{
+    padding-top: 2rem;
     padding-left: 0rem;
    }
 }
